Fixed Heading's spacing, Extended LabeledIcon to support custom icons, fixed Switch
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/styles/colors-gallium-night.less
+++ b/styles/colors-gallium-night.less
@@ -268,10 +268,10 @@
 
 // Switch
 // ---------------------------------------
-@agate-switch-bg-color: @agate-foreground;
+@agate-switch-bg-color: @agate-darker-gray;
 @agate-switch-selected-bg-color: @agate-accent;
 @agate-switch-selected-focus-bg-color: @agate-switch-selected-bg-color;
-@agate-switch-color: @agate-title-text-color;
+@agate-switch-color: @agate-dark-gray;
 @agate-switch-selected-color: @agate-title-text-color;
 @agate-switch-focus-bg-color: @agate-text-color;
 @agate-switch-focus-color: black;
